--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "node-fetch": "^2.6.1"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node bot"
   },
   "repository": {
     "type": "git",
