--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "discord.js": "^13.1.0",
     "dotenv": "^10.0.0",
     "node-fetch": "^2.6.1",
+    "sequelize": "^6.6.5",
+    "sqlite3": "^5.0.2",
     "uuid": "^8.3.2"
   },
   "scripts": {
