Implemented Caching API and changed how data is handled

--- a/package.json
+++ b/package.json
@@ -4,8 +4,14 @@
   "description": "A Splitgate Stat Bot",
   "main": "bot.js",
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "chalk": "^4.1.2",
+    "cors": "^2.8.5",
     "discord.js": "^13.1.0",
     "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "morgan": "^1.10.0",
+    "node-cache": "^5.1.2",
     "node-fetch": "^2.6.1",
     "sequelize": "^6.6.5",
     "sqlite3": "^5.0.2",
