forgot to change prefix lul

--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "botuser": {
-      "prefix": "spld!"  
+      "prefix": "spl!"  
     },
     "embed": {
         "username": "SplitStat - ERRORS",
