--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "discord-api-types": "^0.23.1",
     "discord.js": "^13.1.0",
     "dotenv": "^10.0.0",
+    "epoch-days": "^1.1.1",
+    "node-cache": "^5.1.2",
     "node-fetch": "^2.6.1",
     "uuid": "^8.3.2"
   }
