--- a/package.json
+++ b/package.json
@@ -26,10 +26,13 @@
     "@discordjs/rest": "^0.1.0-canary.0",
     "axios": "^0.22.0",
     "chalk": "^4.1.2",
+    "cors": "^2.8.5",
     "discord-api-types": "^0.23.1",
     "discord.js": "^13.1.0",
     "dotenv": "^10.0.0",
     "epoch-days": "^1.1.1",
+    "express": "^4.17.1",
+    "morgan": "^1.10.0",
     "node-cache": "^5.1.2",
     "node-fetch": "^2.6.1",
     "uuid": "^8.3.2"
