--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "dotenv": "^10.0.0",
     "epoch-days": "^1.1.1",
     "express": "^4.17.1",
+    "medaltv-wrapper": "^2.0.3",
     "morgan": "^1.10.0",
     "node-cache": "^5.1.2",
     "node-fetch": "^2.6.1",
