--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "morgan": "^1.10.0",
     "node-cache": "^5.1.2",
     "node-fetch": "^2.6.1",
+    "redis": "^3.1.2",
     "uuid": "^8.3.2"
   }
 }
