--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "@discordjs/builders": "^0.6.0",
     "@discordjs/rest": "^0.1.0-canary.0",
+    "async-redis": "^2.0.0",
     "axios": "^0.22.0",
     "chalk": "^4.1.2",
     "cors": "^2.8.5",
@@ -36,7 +37,6 @@
     "morgan": "^1.10.0",
     "node-cache": "^5.1.2",
     "node-fetch": "^2.6.1",
-    "redis": "^3.1.2",
     "uuid": "^8.3.2"
   }
 }
