--- a/package.json
+++ b/package.json
@@ -3,9 +3,6 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/awexxx/splitstat.git"
@@ -15,6 +12,9 @@
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/awexxx/splitstat/issues"
+  },
+  "scripts": {
+    "start": "node ./deploy && node ."
   },
   "homepage": "https://github.com/awexxx/splitstat#readme",
   "dependencies": {
